[tool.poetry]
name = "seek"
version = "0.1.0"
description = ""
authors = ["mishal <mishaal79@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-restx = "^0.2.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.8.6"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.11.1"
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.8.0"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
